--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "target": "ES6",
     "moduleResolution": "Node"
   },
-  "include": ["src"],
+  "include": ["packages"],
   "exclude": ["src/**/template-*"]
 }
