--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "module": "CommonJS",
     "target": "ES6",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "jsx": "react"
   },
   "include": ["packages"],
   "exclude": ["src/**/template-*"]
