--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "scripts": {
     "lint": "eslint . --fix",
     "lint:test": "eslint .",
-    "build": "lerna run build"
+    "start": "lerna run start",
+    "build": "lerna run build",
+    "storybook": "lerna run storybook",
+    "docs": "typedoc ./packages/core/src/index.ts --excludeInternal"
   },
   "dependencies": {
     "@lukasbach/eslint-config-deps": "^1.0.3",
-    "eslint": "^8.39.0"
-  },
-  "devDependencies": {
-    "lerna": "^6.6.1"
+    "eslint": "^8.39.0",
+    "lerna": "^6.6.1",
+    "typedoc": "^0.24.6"
   },
   "volta": {
     "node": "18.16.0",
