--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@headless-tree/core",
   "version": "0.0.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "tsc -w"
   },
   "author": "Lukas Bach <npm@lukasbach.com>",
   "license": "MIT",
