--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,10 +14,12 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
+    "@headless-tree/core": "workspace:*",
     "@storybook/addon-essentials": "7.0.7",
     "@storybook/addon-interactions": "7.0.7",
     "@storybook/addon-links": "7.0.7",
     "@storybook/blocks": "7.0.7",
+    "@storybook/builder-vite": "^7.0.7",
     "@storybook/react": "7.0.7",
     "@storybook/react-webpack5": "7.0.7",
     "@storybook/testing-library": "0.0.14-next.2",
@@ -25,9 +27,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "7.0.7",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite": "^4.3.3"
   },
   "peerDependencies": {
+    "@headless-tree/core": "*",
     "react": "*",
     "react-dom": "*"
   }
