focus movement hotkeys

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "parserOptions": {
       "project": "./tsconfig.json"
     },
+    "rules": {
+      "no-param-reassign": "off"
+    },
     "ignorePatterns": [
       "lib",
       "*.js"
