--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "overrides": {
     "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1"
+    "@typescript-eslint/parser": "5.59.1",
+    "@types/react": "18.2.6",
+    "@types/eslint": "7.29.0"
   },
   "volta": {
     "node": "18.16.0",
