--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "CommonJS",
     "target": "ES6",
     "moduleResolution": "Node",
-    "jsx": "react"
+    "jsx": "react",
+    "skipLibCheck": true
   },
   "include": ["packages"],
   "exclude": ["src/**/template-*"]
