--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@headless-tree/react",
   "version": "0.0.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "start": "tsc -w"
   },
   "author": "Lukas Bach <npm@lukasbach.com>",
   "license": "MIT",
@@ -15,20 +14,10 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@headless-tree/core": "workspace:*",
-    "@storybook/addon-essentials": "7.0.7",
-    "@storybook/addon-interactions": "7.0.7",
-    "@storybook/addon-links": "7.0.7",
-    "@storybook/blocks": "7.0.7",
-    "@storybook/builder-vite": "^7.0.7",
-    "@storybook/react": "7.0.7",
-    "@storybook/react-webpack5": "7.0.7",
-    "@storybook/testing-library": "0.0.14-next.2",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "7.0.7",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.3"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "@headless-tree/core": "*",
