--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "^6.0.10",
     "@mantine/prism": "^6.0.10",
     "@mdx-js/react": "^2.3.0",
+    "@types/node": "^20.1.1",
     "fs-extra": "^11.1.1",
     "gatsby": "^5.9.0",
     "gatsby-plugin-mantine": "^5.0.0",
