api docs and demo box

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "skipLibCheck": true
   },
   "include": ["packages"],
-  "exclude": ["src/**/template-*"]
+  "exclude": ["src/**/template-*", "packages/docs"]
 }
