--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -27,6 +27,9 @@
     "gatsby-transformer-remark": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
     "tsconfig-paths-webpack-plugin": "4.0.1"
   },
   "devDependencies": {
