--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "eslintConfig": {
     "extends": "@lukasbach/base",
     "parserOptions": {
-      "project": "./tsconfig.json"
+      "project": "./tsconfig.lint.json"
     },
     "rules": {
       "no-param-reassign": "off"
