--- a/packages/sb-react/package.json
+++ b/packages/sb-react/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-typescript": "^7.21.5",
     "@headless-tree/core": "workspace:*",
     "@headless-tree/react": "workspace:*",
+    "@storybook/addon-actions": "^7.0.10",
     "@storybook/addon-essentials": "7.0.7",
     "@storybook/addon-interactions": "7.0.7",
     "@storybook/addon-links": "7.0.7",
