--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Verify
+name: Publish
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
 jobs:
   verify:
     runs-on: ubuntu-latest
-    name: Verify
+    name: Publish
     steps:
       - uses: actions/checkout@v3
       - uses: volta-cli/action@v3
