--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
       "project": "./tsconfig.lint.json"
     },
     "rules": {
-      "no-param-reassign": "off"
+      "no-param-reassign": "off",
+      "no-nested-ternary": "warn",
+      "@typescript-eslint/no-shadow": "off",
+      "@typescript-eslint/no-unused-vars": "warn",
+      "no-empty-pattern": "off"
     },
     "ignorePatterns": [
       "lib",
