--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
+    "@headless-tree/core": "workspace:*",
+    "@headless-tree/react": "workspace:*",
+    "@headless-tree/sb-react": "workspace:*",
     "@mantine/core": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
     "@mantine/prism": "^6.0.10",
@@ -30,10 +33,7 @@
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1",
-    "tsconfig-paths-webpack-plugin": "4.0.1",
-    "@headless-tree/sb-react": "workspace:*",
-    "@headless-tree/react": "workspace:*",
-    "@headless-tree/core": "workspace:*"
+    "tsconfig-paths-webpack-plugin": "4.0.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
