--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: volta-cli/action@v3
       - run: yarn
       - run: yarn lint
+      - run: yarn docs
+      - run: yarn docs:md
       - run: yarn build
       - name: changesets
         id: changesets
