--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,4 +13,6 @@ jobs:
       - uses: volta-cli/action@v3
       - run: yarn
       - run: yarn lint
+      - run: yarn docs
+      - run: yarn docs:md
       - run: yarn build
