--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --fix",
     "lint:test": "eslint .",
     "start": "lerna run start --parallel --scope @headless-tree/core --scope @headless-tree/sb-react",
-    "build": "lerna run build",
+    "build": "lerna run build,build:cjs,build:esm,build:docs,build:sb --concurrency 1",
     "storybook": "lerna run storybook",
     "docs": "typedoc",
     "docs:md": "typedoc ./packages/core/src/mddocs-entry.ts --entryPointStrategy resolve --plugin typedoc-plugin-markdown --out packages/docs/apidocs"
