--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@headless-tree/core",
   "version": "0.0.1",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
+  "types": "lib/esm/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build:cjs": "tsc",
+    "build:esm": "tsc -m es2015 --outDir lib/esm",
     "start": "tsc -w"
   },
   "author": "Lukas Bach <npm@lukasbach.com>",
