--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: volta-cli/action@v3
       - run: yarn
       - run: yarn lint
+      - run: yarn build:core
       - run: yarn docs
       - run: yarn docs:md
-      - run: yarn build
+      - run: yarn build:web
       - name: changesets
         id: changesets
         uses: changesets/action@v1
