--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,21 +21,14 @@ jobs:
       - run: yarn docs
       - run: yarn docs:md
       - run: yarn build:web
-      - run: yarn changeset version
-      - name: Set NPM Publish Token
-        run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-      - run: yarn changeset publish
+      - uses: changesets/action@v1.4.0
+        id: changesets
+        with:
+          commit: "chore: release"
+          title: "Release"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # - uses: changesets/action@v1.4.0
-      #   id: changesets
-      #   with:
-      #     publish: yarn changeset publish
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # - name: publish
-      #   if: steps.changesets.outputs.hasChangesets == 'false'
-      #   run: yarn changeset publish
+      - name: publish
+        if: steps.changesets.outputs.hasChangesets == 'false'
+        run: yarn changeset publish
