--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,16 +21,26 @@ jobs:
       - run: yarn docs
       - run: yarn docs:md
       - run: yarn build:web
+      - run: yarn changeset version
       - name: Set NPM Publish Token
-        run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-      - uses: changesets/action@v1
-        id: changesets
-        with:
-          commit: "chore: release"
-          title: "Release"
+        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> .npmrc
+      - run: yarn changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: publish
-        if: steps.changesets.outputs.hasChangesets == 'false'
-        run: yarn changeset publish
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: rm .npmrc
+      - name: Commit & Push changes
+        uses: actions-js/push@master
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
+      # - uses: changesets/action@v1.4.0
+      #   id: changesets
+      #   with:
+      #     publish: yarn changeset publish
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # - name: publish
+      #   if: steps.changesets.outputs.hasChangesets == 'false'
+      #   run: yarn changeset publish
