--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,13 +23,12 @@ jobs:
       - run: yarn build:web
       - run: yarn changeset version
       - name: Set NPM Publish Token
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> .npmrc
+        run: npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
       - run: yarn changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: rm .npmrc
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
