--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,8 @@ jobs:
       - run: yarn docs:md
       - run: yarn build:web
       - run: yarn changeset version
+      - run: cat ./npmrc
+      - run: cat $NPM_CONFIG_USERCONFIG
       - run: yarn changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
