--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,11 @@
     "build:esm": "tsc -m es2015 --outDir lib/esm",
     "start": "tsc -w"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:lukasbach/headless-tree.git",
+    "directory": "packages/core"
+  },
   "author": "Lukas Bach <npm@lukasbach.com>",
   "license": "MIT",
   "devDependencies": {
