--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,6 +4,7 @@
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "types": "lib/esm/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "build:cjs": "tsc",
     "build:esm": "tsc -m es2015 --outDir lib/esm",
