--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: volta-cli/action@v3
       - run: yarn
-      - run: yarn lint
+      - run: yarn lint:test
       - run: yarn build:core
       - run: yarn docs
       - run: yarn docs:md
