--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint": "^8.39.0",
     "lerna": "^6.6.1",
     "typedoc": "^0.24.6",
-    "typedoc-plugin-markdown": "^3.15.3"
+    "typedoc-plugin-markdown": "^3.15.3",
+    "zx": "^7.2.2"
   },
   "overrides": {
     "@typescript-eslint/eslint-plugin": "5.59.1",
@@ -54,5 +55,8 @@
       "lib",
       "*.js"
     ]
+  },
+  "devDependencies": {
+    "@nrwl/nx-cloud": "latest"
   }
 }
