--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,8 @@ jobs:
       - run: yarn docs
       - run: yarn docs:md
       - run: yarn build:web
-      - run: tree ./packages/docs/public
+      - run: |
+          cp -r ./packages/sb-react/storybook-static ./packages/docs/public/storybook/react
       - uses: actions/upload-pages-artifact@v1
         with:
           path: ./packages/docs/public
