--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v3
         with:
-          path: '**/node_modules'
+          path: '**/node_modules,./.yarn/cache'
           key: ${{ runner.os }}-deps-${{ hashFiles('**/yarn.lock') }}
       - uses: volta-cli/action@v3
       - run: yarn
@@ -28,6 +28,7 @@ jobs:
       - run: yarn docs:md
       - run: yarn build:web
       - run: |
+          mkdir -p ./packages/docs/public/storybook
           cp -r ./packages/sb-react/storybook-static ./packages/docs/public/storybook/react
       - uses: actions/upload-pages-artifact@v1
         with:
