--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,12 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
+      - uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ./.yarn/cache
+          key: ${{ runner.os }}-deps-${{ hashFiles('**/yarn.lock') }}
       - uses: volta-cli/action@v3
       - run: yarn
       - run: yarn lint:test
