--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -32,6 +32,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "4.0.1",
     "remark-gfm": "^3.0.1",
     "tsconfig-paths-webpack-plugin": "4.0.1"
   },
