--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.1.1",
     "fs-extra": "^11.1.1",
     "gatsby": "^5.9.0",
+    "gatsby-link": "^5.10.0",
     "gatsby-plugin-mantine": "^5.0.0",
     "gatsby-plugin-mdx": "^5.9.0",
     "gatsby-source-filesystem": "^5.9.0",
