--- a/packages/sb-react/package.json
+++ b/packages/sb-react/package.json
@@ -26,6 +26,7 @@
     "@storybook/react-webpack5": "7.0.7",
     "@storybook/testing-library": "0.0.14-next.2",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
+    "classnames": "^2.3.2",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
