--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,8 +6,8 @@
   "types": "lib/esm/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build:cjs": "tsc",
-    "build:esm": "tsc -m es2015 --outDir lib/esm",
+    "build:cjs": "tsc -m commonjs --outDir lib/cjs",
+    "build:esm": "tsc",
     "start": "tsc -w"
   },
   "repository": {
