--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "module": "CommonJS",
+    "module": "ES2015",
     "target": "ES6",
     "moduleResolution": "Node",
     "jsx": "react",
