--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@changesets/cli": "^2.26.1",
     "@lukasbach/eslint-config-deps": "^1.0.3",
+    "@mantine/ssr": "^6.0.13",
     "@types/node": "18.16.1",
     "@types/react": "18.2.1",
     "@types/react-dom": "18.2.1",
