--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -11,7 +11,9 @@ jobs:
       pull-requests: write
     steps:
       - name: "Test"
-        run: echo github.ref_name
+        run: echo "$REF_NAME"
+        env:
+          REF_NAME: ${{ toJson(github.ref_name) }}
       - name: "Merge pull request"
         if: github.ref_name == 'changeset-release/main'
         uses: "actions/github-script@v6"
