--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       pull-requests: write
     steps:
+      - uses: actions/checkout@v2
       - id: vars
         run: |
           echo "owner=$(gh pr view --json headRepositoryOwner --jq .headRepositoryOwner.login)" >> "$GITHUB_OUTPUT"
