--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  verify:
+  prepare:
     runs-on: ubuntu-latest
     name: Publish
     steps:
@@ -27,14 +27,27 @@ jobs:
       - run: yarn docs
       - run: yarn docs:md
       - run: yarn build:web
+
+  publish:
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
           version: yarn changeset version
           publish: yarn changeset publish
-          commit: "chore: release"
+          commit: "chore: release [skip ci]"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  snapshot:
+    needs: publish
+    runs-on: ubuntu-latest
+    if: jobs.publish.outputs.published  == false
+    steps:
+      - run: yarn changeset version --snapshot
+      - run: yarn changeset publish --no-git-tag --tag snapshot
