--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,7 +5,7 @@
   "author": "Lukas Bach <npm@lukasbach.com>",
   "license": "MIT",
   "scripts": {
-    "start": "gatsby develop --open",
+    "start": "gatsby develop --open --verbose",
     "build:docs": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -24,11 +24,12 @@
     "@mdx-js/react": "^2.3.0",
     "@types/node": "^20.1.1",
     "fs-extra": "^11.1.1",
-    "gatsby": "^5.10.0",
-    "gatsby-link": "^5.10.0",
-    "gatsby-plugin-mdx": "^5.10.0",
-    "gatsby-source-filesystem": "^5.10.0",
-    "gatsby-transformer-remark": "^6.10.0",
+    "gatsby": "^5.11.0",
+    "gatsby-link": "^5.11.0",
+    "gatsby-plugin-mdx": "^5.11.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-remark": "^6.11.0",
+    "iframe-resizer-react": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
