--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-mdx": "^5.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-remark": "^6.11.0",
+    "iframe-resizer-react": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
