--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,6 +11,11 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
+  "volta": {
+    "node": "18.16.0",
+    "yarn": "3.5.0",
+    "npm": "9.6.7"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
