--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build": "lerna run build,build:cjs,build:esm,build:docs,build:sb --concurrency 1",
     "build:core": "lerna run build,build:cjs,build:esm --concurrency 1",
     "build:web": "lerna run build:docs,build:sb --concurrency 1",
-    "storybook": "lerna run storybook",
-    "docs": "typedoc",
+    "docs": "typedoc --plugin typedoc-plugin-markdown",
     "docs:md": "typedoc ./packages/core/src/mddocs-entry.ts --entryPointStrategy resolve --plugin typedoc-plugin-markdown --out packages/docs/apidocs"
   },
   "dependencies": {
