--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start:docs": "lerna run start --parallel --scope @headless-tree/docs",
     "build": "lerna run build,build:cjs,build:esm,build:docs,build:sb --concurrency 1",
     "build:core": "lerna run build,build:cjs,build:esm --concurrency 1",
-    "build:web": "lerna run build:docs,build:sb --concurrency 1",
-    "docs": "typedoc --plugin typedoc-plugin-markdown",
-    "docs:md": "typedoc ./packages/core/src/mddocs-entry.ts --entryPointStrategy resolve --plugin typedoc-plugin-markdown --out packages/docs/apidocs"
+    "build:web": "lerna run build:docs,build:sb --concurrency 1"
   },
   "dependencies": {
     "@changesets/cli": "^2.27.1",
