--- a/packages/docs-new/package.json
+++ b/packages/docs-new/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "docs-new",
+  "name": "@headless-tree/docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build:docs": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
