--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
       "no-nested-ternary": "warn",
       "@typescript-eslint/no-shadow": "off",
       "@typescript-eslint/no-unused-vars": "warn",
-      "no-empty-pattern": "off"
+      "no-empty-pattern": "off",
+      "react/button-has-type": "off",
+      "react/no-unescaped-entities": "warn",
+      "no-alert": "off",
+      "react/destructuring-assignment": "off"
     },
     "ignorePatterns": [
       "lib",
