--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,6 +28,7 @@
     "@docusaurus/module-type-aliases": "3.1.1",
     "@docusaurus/tsconfig": "3.1.1",
     "@docusaurus/types": "3.1.1",
+    "@headless-tree/sb-react": "workspace:*",
     "docusaurus-plugin-typedoc": "^1.0.1",
     "docusaurus-plugin-typedoc-api": "^4.2.0",
     "typescript": "~5.2.2"
