--- a/packages/sb-react/package.json
+++ b/packages/sb-react/package.json
@@ -16,22 +16,25 @@
     "@babel/preset-typescript": "^7.21.5",
     "@headless-tree/core": "workspace:*",
     "@headless-tree/react": "workspace:*",
-    "@storybook/addon-actions": "^7.0.10",
-    "@storybook/addon-essentials": "7.0.7",
-    "@storybook/addon-interactions": "7.0.7",
-    "@storybook/addon-links": "7.0.7",
-    "@storybook/blocks": "7.0.7",
-    "@storybook/builder-vite": "^7.0.7",
-    "@storybook/react": "7.0.7",
-    "@storybook/react-webpack5": "7.0.7",
-    "@storybook/testing-library": "0.0.14-next.2",
+    "@storybook/addon-actions": "^8.6.0-alpha.0",
+    "@storybook/addon-essentials": "^8.6.0-alpha.0",
+    "@storybook/addon-interactions": "^8.6.0-alpha.0",
+    "@storybook/addon-links": "^8.6.0-alpha.0",
+    "@storybook/blocks": "^8.6.0-alpha.0",
+    "@storybook/builder-vite": "^8.6.0-alpha.0",
+    "@storybook/react": "^8.6.0-alpha.0",
+    "@storybook/react-webpack5": "^8.6.0-alpha.0",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "classnames": "^2.3.2",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "7.0.7",
+    "storybook": "^8.6.0-alpha.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.3"
+  },
+  "devDependencies": {
+    "@storybook/addon-webpack5-compiler-swc": "2.0.0",
+    "@storybook/test": "8.6.0-alpha.0"
   }
 }
