--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@headless-tree/core",
   "version": "0.0.10",
+  "type": "module",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "types": "lib/esm/index.d.ts",
@@ -8,7 +9,8 @@
   "scripts": {
     "build:cjs": "tsc -m commonjs --outDir lib/cjs",
     "build:esm": "tsc",
-    "start": "tsc -w"
+    "start": "tsc -w",
+    "test": "vitest run"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,8 @@
   "author": "Lukas Bach <npm@lukasbach.com>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.4.2"
+    "jsdom": "^26.0.0",
+    "typescript": "^5.4.2",
+    "vitest": "^3.0.3"
   }
 }
