--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
-registry-url=https://registry.npmjs.org/
+registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//registry-url=https://registry.npmjs.org/
 always-auth=true
