--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   publish:
@@ -29,6 +30,7 @@ jobs:
       - run: yarn test
       - run: yarn build:core
       - run: yarn build:web
+
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
