--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,9 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [],
+  "fixed": [
+    ["@headless-tree/core", "@headless-tree/react"]
+  ],
   "linked": [],
   "access": "public",
   "baseBranch": "main",
