--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
+
       - uses: actions/cache@v3
         with:
           path: |
@@ -25,6 +26,9 @@ jobs:
             ./.yarn/cache
           key: ${{ runner.os }}-deps-${{ hashFiles('**/yarn.lock') }}
       - uses: volta-cli/action@v4.1.1
+        with:
+          registry-url: "https://registry.npmjs.org"
+
       - run: yarn
       - run: yarn lint:test
       - run: yarn test
@@ -53,5 +57,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-
