--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -35,14 +35,11 @@ jobs:
       - run: yarn build:core
       - run: yarn build:web
 
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          version: yarn changeset version
-          publish: yarn changeset publish
-          commit: "chore: release"
+      - name: Snapshot Versioning
+        run: yarn changeset version --snapshot
+      - name: Snapshot Release
+        run: yarn changeset publish --no-git-tag --tag snapshot
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
