--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -22,6 +22,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
