--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,10 +34,10 @@ jobs:
       - run: yarn test
       - run: yarn build:core
       - run: yarn build:web
-      - name: Copy README.md to packages
+      - name: Copy readme.md to packages
         run: |
           for dir in $(find packages -type d -maxdepth 1); do
-            cp README.md $dir/README.md
+            cp readme.md $dir/readme.md
           done
 
       - name: Create Release Pull Request or Publish to npm
