--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@headless-tree/example-basic",
+  "description": "Basic example of Headless Tree with React",
   "private": true,
   "version": "0.0.0",
   "type": "module",
