--- a/examples/react-compiler/package.json
+++ b/examples/react-compiler/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@headless-tree/example-react-compiler",
+  "description": "Headless Tree with React Compiler enabled",
   "private": true,
   "version": "0.0.0",
   "type": "module",
