--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:web": "lerna run build:docs,build:sb --concurrency 1",
     "test": "lerna run test --stream",
     "postinstall": "zx scripts/prepare.mjs",
+    "llmtxt": "zx scripts/generate-llmtxt.mjs",
     "verify": "yarn lint && lerna run build,build:esm,test --stream"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "eslint": "^8.57.0",
+    "front-matter": "^4.0.2",
     "lerna": "^8.1.3",
     "typedoc": "^0.25.13",
     "typedoc-plugin-markdown": "^3.17.1",
