--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
   },
   "devDependencies": {
     "@nrwl/nx-cloud": "latest"
+  },
+  "resolutions": {
+    "@headless-tree/core": "workspace:*",
+    "@headless-tree/react": "workspace:*"
   }
 }
