--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@headless-tree/react",
   "version": "1.1.0",
+  "type": "module",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "types": "lib/esm/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build:cjs": "tsc -m commonjs --outDir lib/cjs",
-    "build:esm": "tsc",
+    "build:cjs": "tsc -m commonjs --moduleResolution node10 --outDir lib/cjs",
+    "build:esm": tsc",
     "start": "tsc -w"
   },
   "repository": {
