--- a/examples/react-compiler/package.json
+++ b/examples/react-compiler/package.json
@@ -24,5 +24,8 @@
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
