--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -23,5 +23,8 @@
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
