--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@headless-tree/example-basic",
   "description": "Basic example of Headless Tree with React",
+  "author": "Lukas Bach <npm@lukasbach.com>",
+  "funding": "https://github.com/sponsors/lukasbach",
   "private": true,
   "version": "0.0.0",
   "type": "module",
