--- a/examples/comprehensive/package.json
+++ b/examples/comprehensive/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@headless-tree/example-comprehensive",
   "description": "Integration of Headless Tree with React with most HT features enabled",
+  "author": "Lukas Bach <npm@lukasbach.com>",
+  "funding": "https://github.com/sponsors/lukasbach",
   "private": true,
   "version": "0.0.0",
   "type": "module",
