--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -12,8 +12,8 @@
     "build": "tsc -b && vite build"
   },
   "dependencies": {
-    "@headless-tree/core": "^1.0.0",
-    "@headless-tree/react": "^1.0.0",
+    "@headless-tree/core": "latest",
+    "@headless-tree/react": "latest",
     "classnames": "^2.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
