--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           version: npx zx ./scripts/version.mjs
           publish: yarn changeset publish
-          commit: "chore: release"
+          commit: "chore: release [nosnapshot]"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
