--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,6 +28,9 @@
     "./package.json": "./package.json"
   },
   "sideEffects": false,
+  "publishConfig": {
+    "provenance": true
+  },
   "scripts": {
     "build": "tsup ./src/index.ts ./src/react17/index.tsx --format esm,cjs --dts",
     "start": "tsup ./src/index.ts --format esm,cjs --dts --watch"
