--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,8 +24,8 @@
         "default": "./dist/index.mjs"
       },
       "require": {
-        "types": "./dist/index.js",
-        "default": "./dist/index.d.ts"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     },
     "./react17": {
@@ -34,8 +34,8 @@
         "default": "./dist/react17/index.mjs"
       },
       "require": {
-        "types": "./dist/react17/index.js",
-        "default": "./dist/react17/index.d.ts"
+        "types": "./dist/react17/index.d.ts",
+        "default": "./dist/react17/index.js"
       }
     },
     "./package.json": "./package.json"
