chore: add repro for react compiler issues (#170)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "examples/basic",
     "examples/comprehensive",
     "examples/nextjs",
-    "examples/react-compiler"
+    "examples/react-compiler",
+    "examples/nextjs-react-compiler"
   ],
   "scripts": {
     "lint": "eslint . --fix",
