--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -7,7 +7,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:sample": "next build",
     "start": "next start"
   },
   "dependencies": {
